# google-cape-town-hackathon

./: .dockerignore  .env.example  .gcloudignore  AGENT.md  Dockerfile  README.md  app.py  build.sh  cloudbuild.yaml  deploy.sh  docker-compose.yml  env.example  nginx.conf  pyproject.toml  run_local.sh  simple_app.py
generate_data/: README.md  generate_data.py
pages/: patient_intake.py
terraform/: README.md  backend.tf.example  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
