[project]
name = "test-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "audio-recorder-streamlit>=0.0.10",
    "cryptography>=46.0.1",
    "faker>=24.0.0",
    "folium>=0.20.0",
    "google-cloud-bigquery>=3.15.0",
    "google-genai>=0.8.5",
    "google-generativeai>=0.8.5",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "pydub>=0.25.1",
    "pyjwt>=2.10.1",
    "pypdf2>=3.0.1",
    "python-dateutil>=2.9.0.post0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "reportlab>=4.4.4",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.1",
    "speechrecognition>=3.14.3",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.50.0",
    "streamlit-mic-recorder>=0.0.8",
    "streamlit-webrtc>=0.63.4",
    "transformers>=4.56.2",
]
